--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.7",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
